# yew-cherry-online

./: Cargo.toml  auth_config.json  index-18e4d1056769e038.js  index-18e4d1056769e038_bg.wasm  index.html
.github/workflows/: deploy.yml
src/: auth0-wrapper.js  bindings.rs  get-payload-script.js  main.rs
