[package]
name = "yew-cherry-online"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.55"
log = "0.4"
reqwasm = "0.4.0"
serde = { version = "1.0.133", features = ["derive"] }
serde-wasm-bindgen = "0.4.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.28"
wasm-logger = "0.2"
yew = "0.19"
